--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Memory game</h1>
-        <div class="game-box">
-            <h2>Remember the number</h2>
-            <div class="counter-box"></div>
-        </div>
-        <div class="game-box-result">
-            <div class="timer"></div>
-            <div class="number"></div>
-            <div class="result"></div> 
-        </div>
-    </div>
+    <h1>MEMORY GAME</h1>
+    <h3>Remember the numbers</h3>
+    <div class="numbers"></div>
 </body>
 </html>
